2008-09-29  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ip4.c
		- (ui_to_setting): accept ', ;:' as delimiters for DNS servers and 
			searches

2008-09-26  Tambet Ingo  <tambet@gmail.com>

	* src/gconf-helpers/gconf-helpers.c (read_one_setting_value_from_gconf): Fix a
	memory leak.

2008-09-25  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/ce-page-mobile.glade
	  src/connection-editor/page-mobile.c
		- Fix names & constants to accurately reflect the network technologies
			in question (bgo #551361)

2008-09-24  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
		- (write_one_secret_to_keyring): silence warning about VPN secrets, which
			don't get written to the keyring by the generic GConf helper code,
			but instead by the VPN plugins themselves

2008-09-24  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-upgrade.c
		- (nm_gconf_migrate_0_7_vpn_properties): don't set empty values in GConf
		- (move_one_vpn_string_bool, move_one_vpn_string_string): fix stray
			semicolon that caused values to not get converted and removed
			(second part of fix for bgo #553465)

2008-09-24  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
		- (nm_gconf_get_stringhash_helper, write_properties_stringhash): do not
			read or write empty values (partial fix for bgo #553465)

2008-09-22  Tambet Ingo  <tambet@gmail.com>

	* src/applet.c (make_vpn_failure_message): Handle login failure.

2008-09-15  Tambet Ingo  <tambet@gmail.com>

	* src/connection-editor/nm-connection-editor.c (populate_connection_ui): Fix
	the connection editor crashing on any change to name or autoconnect widgets.

2008-09-15  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
		- (nm_gconf_write_connection, write_one_secret_to_keyring): split out
			writing of secrets into it's own function for clarity.  Fixes a
			regression introduced in r875 where secrets wouldn't get saved.
